trying to fix the scaling issues on mobile

--- a/style.css
+++ b/style.css
@@ -39,10 +39,13 @@
 
 body
 {
-	width: 100vw;
-	max-width:850px;
-	font-size: 1vw;
+	width: clamp(360px, 80vw, 850px);
+	font-size: clamp(12px, 1vw, 22px);
 	line-height: 1.5;
+
+    padding: 0 1rem 0 1rem;
+
+	/* Center all elements inside body */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -66,6 +69,11 @@ nav {
 nav button{
 	padding: 0.1rem 1rem 0.1rem 1rem;
 	margin: 0 1rem 0 1rem;
+}
+
+nav button:focus{
+	color: #2a2f30;
+    background-position: left;
 }
 
 nav * {
